changed the build

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+<script type="text/javascript" src="../src/js/api.js"></script>
+<script type="text/javascript" src="../src/js/api-connector.js"></script>
 </body>
 </html>
